[tool.poetry]
name = "data-viz"
version = "0.1.0"
description = "Data Visualization Projects"
authors = ["Nabil Khalil <nabilamirkhalil@gmail.com>"]
readme = "README.md"
packages = [{ include = "data_viz", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.4"
pandas = "^2.2.1"
plotly = "^5.20.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
